--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -18,8 +18,6 @@
     min-width: 320px;
     max-width: 630px;
     width: 50%;
-    -webkit-transform:translateX(-50%) translateY(-50%);
-    transform:translateX(-50%) translateY(-50%)
 }
 
 /* datatables */
