--- a/client/app/upload/upload.modal.css
+++ b/client/app/upload/upload.modal.css
@@ -27,8 +27,6 @@
 	min-width: 320px;
 	max-width: 630px;
 	width: 50%;
-	-webkit-transform:translateX(-50%) translateY(-50%);
-	transform:translateX(-50%) translateY(-50%)
 }
 
 .modal-upload-cnt {
